# Duckdb

./: .gitmodules  CMakeLists.txt
src/: alex_extension.cpp
